--- a/Resources/Prototypes/_CP14/Recipes/Workbench/furnace.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Workbench/furnace.yml
@@ -46,14 +46,16 @@
     knowledge: MetallMelting
   result: CP14MithrilBar1
 
-#- type: CP14Recipe
-#  id: CP14GlassSheet1
-#  tag: CP14RecipeMeltingFurnace
-#  craftTime: 4
-#  entities:
-#    CP14QuartzShard: 1
-#  result: CP14GlassSheet1
-#  knowledgeRequired: Glasswork
+- type: CP14Recipe
+  id: CP14GlassSheet1
+  tag: CP14RecipeMeltingFurnace
+  craftTime: 4
+  requirements:
+  - !type:ProtoIdResource
+    protoId: CP14CrystalShardBase
+  - !type:KnowledgeRequired
+    knowledge: Glasswork
+  result: CP14GlassSheet1
 
 - type: CP14Recipe
   id: CP14GlassSheetShard1
