--- a/Resources/ConfigPresets/_CP14/Dev.toml
+++ b/Resources/ConfigPresets/_CP14/Dev.toml
@@ -15,9 +15,10 @@ max_connections = 100
 
 [game]
 hostname = "⚔️  CrystallEdge Alpha ⚔️  "
-desc = "History of the City of Sword and Magic. A social economic sandbox reinventing the Space Station 14 concept in"
+desc = "History of the City of Sword and Magic. A social economic sandbox reinventing the Space Station 14 concept in fantasy style"
 lobbyenabled = true
 soft_max_players = 40
+lobbyduration = 300
 
 [server]
 rules_file = "CP14SandboxRU"
