--- a/Resources/Prototypes/_CP14/Entities/Mobs/NPC/animals.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/NPC/animals.yml
@@ -209,3 +209,109 @@
       path: /Audio/Animals/pig_oink.ogg
   - type: StealTarget
     stealGroup: CP14Boar
+
+- type: entity
+  name: frog
+  parent: SimpleMobBase
+  id: CP14MobFrog
+  description: Green and constantly jumping frog, and perhaps thanks to it mosquitoes have not completely filled the marshes.
+  categories: [ ForkFiltered ]
+  components:
+  - type: NpcFactionMember
+    factions:
+    - CP14Neutrals
+  - type: MovementSpeedModifier
+    baseWalkSpeed: 3
+    baseSprintSpeed: 5
+  - type: Sprite
+    drawdepth: SmallMobs
+    layers:
+    - map: ["enum.DamageStateVisualLayers.Base", "movement"]
+      sprite: _CP14/Mobs/Animals/frog.rsi
+      state: frog
+  - type: Clothing
+    quickEquip: false
+    sprite: _CP14/Mobs/Animals/frog_helmet.rsi
+    equippedPrefix: 0
+    slots:
+    - HEAD
+  - type: SpriteMovement
+    movementLayers:
+      movement:
+        state: frog_moving
+    noMovementLayers:
+      movement:
+        state: frog_blinks
+  - type: Item
+    size: Normal
+  - type: FireVisuals
+    sprite: Mobs/Effects/onfire.rsi
+    normalState: Mouse_burning
+  - type: Speech
+    speechVerb: SmallMob
+  - type: Appearance
+  - type: Physics
+  - type: FloorOcclusion
+  - type: Fixtures
+    fixtures:
+      fix1:
+        shape:
+          !type:PhysShapeCircle
+          radius: 0.2
+        density: 5
+        mask:
+        - SmallMobMask
+        layer:
+        - SmallMobLayer
+  - type: MobThresholds
+    thresholds:
+      0: Alive
+      10: Dead
+  - type: DamageStateVisuals
+    states:
+      Alive:
+        Base: frog
+      Dead:
+        Base: frog_dead
+  - type: Butcherable
+    butcherDelay: 2
+    spawned:
+    - id: CP14FoodMeatFrogLeg
+      amount: 2
+  - type: MeleeWeapon
+    angle: 0
+    animation: WeaponArcBite
+    damage:
+      types:
+        Slash: 0
+  - type: InteractionPopup
+    successChance: 0.6
+    interactSuccessString: petting-success-frog
+    interactFailureString: petting-failure-generic
+    interactSuccessSpawn: EffectHearts
+    interactSuccessSound:
+      path: /Audio/Animals/frog_ribbit.ogg
+  - type: CanEscapeInventory
+  - type: Bloodstream
+    bloodMaxVolume: 30
+    bloodReagent: CP14Blood
+  - type: Tag
+    tags:
+    - CP14Mosquito
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTypeTrigger
+        damageType: Blunt
+        damage: 60
+      behaviors:
+      - !type:GibBehavior { }
+  - type: SpamEmitSound
+    minInterval: 10
+    maxInterval: 20
+    sound:
+      collection: CP14Frog
+      params:
+        volume: -8
+        variation: 0.125
+  - type: SoundWhileAlive
