--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Light/T0_sphere_of_light.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Light/T0_sphere_of_light.yml
@@ -9,7 +9,7 @@
   - type: CP14MagicEffectManaCost
     manaCost: 10
   - type: CP14MagicEffect
-    magicType: LightDarkness
+    magicType: Light
     effects:
     - !type:CP14SpellSpawnEntityOnTarget
       spawns:
@@ -120,7 +120,7 @@
             volume: -12
 
 - type: entity
-  parent: CP14BaseSpellScrollLightDarkness
+  parent: CP14BaseSpellScrollLight
   id: CP14SpellScrollSphereOfLight
   name: sphere of light spell scroll
   components:
