--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Light/T1_flash_light.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Light/T1_flash_light.yml
@@ -9,7 +9,7 @@
   - type: CP14MagicEffectManaCost
     manaCost: 10
   - type: CP14MagicEffect
-    magicType: LightDarkness
+    magicType: Light
     telegraphyEffects:
     - !type:CP14SpellSpawnEntityOnTarget
       spawns:
@@ -92,7 +92,7 @@
       lifetime: 0.5
 
 - type: entity
-  parent: CP14BaseSpellScrollLightDarkness
+  parent: CP14BaseSpellScrollLight
   id: CP14SpellScrollFlashLight
   name: flash light spell scroll
   components:
