--- a/Resources/Prototypes/_CP14/Loadouts/Jobs/general.yml
+++ b/Resources/Prototypes/_CP14/Loadouts/Jobs/general.yml
@@ -498,6 +498,12 @@
     - CP14Torch
 
 - type: loadout
+  id: CP14Pipe
+  storage:
+    back:
+    - CP14SmokingPipeFilledTobacco
+
+- type: loadout
   id: CP14LyraInstrument
   storage:
     back:
