--- a/Resources/Prototypes/_CP14/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/_CP14/Loadouts/role_loadouts.yml
@@ -126,6 +126,7 @@
   - CP14GuildmasterShoes
   - CP14GeneralBack
   - CP14GeneralTrinkets
+  - CP14GuildmasterSpells
 
 - type: roleLoadout
   id: JobCP14Banker
