--- a/Resources/Prototypes/_CP14/Loadouts/Jobs/general.yml
+++ b/Resources/Prototypes/_CP14/Loadouts/Jobs/general.yml
@@ -559,6 +559,7 @@
   - CP14ActionSpellFreeze
   - CP14ActionSpellBeerCreation
   - CP14ActionSpellSprint
+  - CP14ActionSpellKick
 
 - type: loadout
   id: CP14ActionSpellBase
@@ -755,3 +756,9 @@
       species:
       - CP14Goblin
       inverted: true # Goblins cannot take this spell, they have buffed version by default
+
+- type: loadout
+  id: CP14ActionSpellKick
+  dummyEntity: CP14ActionSpellKick
+  actions:
+  - CP14ActionSpellKick
