--- a/Resources/Prototypes/_CP14/Recipes/Reactions/Alchemy/wild_sage.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Reactions/Alchemy/wild_sage.yml
@@ -1,14 +1,13 @@
-
 # Simple brewing
 
 - type: reaction
   id: CP14WildSageSapBrewing
-  minTemp: 500
+  minTemp: 530
   priority: 2
   reactants:
     CP14WildSageSap:
       amount: 1
-    CP14GroundQuartz:
+    CP14BasicEffectSimpleBase:
       amount: 1
   products:
     CP14BasicEffectEmpty: 0.75
