--- a/Resources/Prototypes/_CP14/Entities/Clothing/Head/Produced/armor.yml
+++ b/Resources/Prototypes/_CP14/Entities/Clothing/Head/Produced/armor.yml
@@ -14,5 +14,24 @@
         Blunt: 0.90
         Slash: 0.95
   - type: ClothingSpeedModifier
+    walkModifier: 0.96
+    sprintModifier: 0.96
+
+- type: entity
+  parent: CP14ClothingHeadBase
+  id: CP14ClothingHeadBascinet
+  name: bascinet
+  description: Protects most of the head, but the face is still not worth catching blows.
+  components:
+  - type: Sprite
+    sprite: _CP14/Clothing/Head/Produced/Armor/bascinet.rsi
+  - type: Clothing
+    sprite: _CP14/Clothing/Head/Produced/Armor/bascinet.rsi
+  - type: Armor
+    modifiers:
+      coefficients:
+        Blunt: 0.87
+        Slash: 0.91
+  - type: ClothingSpeedModifier
     walkModifier: 0.95
     sprintModifier: 0.95
